--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ app/assets/javascripts/i18n/translations.js
 # Ignore application configuration
 /config/application.yml
 .byebug_history
+vendor/assets/bower_resources/*
