--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,9 @@
     "tests"
   ],
   "dependencies": {
-    "gojs": "^1.6.21"
+    "gojs": "^1.6.21",
+    "angular": "angular2#^1.6.0",
+    "angular-resource": "^1.6.0",
+    "tableheaderfixer-fork": "TableHeadFixer-fork#*"
   }
 }
