--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,8 @@
 build:
-  image: framgia/ruby-workspace-ci
+  image: dieunb/wsm
   commands:
-    - curl -o /usr/bin/framgia-ci https://raw.githubusercontent.com/framgia/ci-report-tool/master/dist/framgia-ci && chmod +x /usr/bin/framgia-ci
-    - bundle install --path=/drone/.bundle
+    - bundle install
     - framgia-ci run
 cache:
   mount:
     - .git
-    - /drone/.bundle
