Import file data timesheet

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -46,3 +46,5 @@ file_xlsx: ".xlsx"
 file_csv: ".csv"
 slash: "/"
 hour_minutes: "%H:%M"
+employee_code_attribute: "employee_code"
+name_attribute: "name"
