--- a/.framgia-ci.yml
+++ b/.framgia-ci.yml
@@ -9,7 +9,7 @@ test:
   reek:
     command: reek --format html > .framgia-ci-reports/reek.html
   rubocop:
-    command: bundle exec rubocop --require rubocop/formatter/checkstyle_formatter --format RuboCop::Formatter::CheckstyleFormatter --no-color --rails --out .framgia-ci-reports/rubocop.xml app/ lib/
+    command: bundle exec rubocop -c .rubocop.yml --require rubocop/formatter/checkstyle_formatter --format RuboCop::Formatter::CheckstyleFormatter --no-color --rails --out .framgia-ci-reports/rubocop.xml app/ lib/
   scss-lint:
     command: scss-lint --require=scss_lint_reporter_checkstyle --format=Checkstyle --out=.framgia-ci-reports/scss-lint.xml app/assets/stylesheets/
     ignore: true
