--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,6 +21,7 @@ AllCops:
     - 'test/**'
     - 'config/**/*'
     - 'app/services/**'
+    - 'app/models/ability.rb'
   # By default, the rails cops are not run. Override in project or home
   # directory .rubocop.yml files, or by giving the -R/--rails option.
 Rails:
