--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,10 @@
   ],
   "dependencies": {
     "gojs": "^1.6.21",
-    "angular": "angular2#^1.6.0",
+    "angular": "angular2#^1.6.1",
     "angular-resource": "^1.6.0",
     "tableheaderfixer-fork": "TableHeadFixer-fork#*",
-    "angular-bootstrap-datetimepicker": "^1.1.3"
+    "angular-bootstrap-datetimepicker": "^1.1.3",
+    "sweetalert": "^1.1.3"
   }
 }
