--- a/.framgia-ci.yml
+++ b/.framgia-ci.yml
@@ -11,9 +11,9 @@ test:
   rubocop:
     command: bundle exec rubocop -c .rubocop.yml --require rubocop/formatter/checkstyle_formatter --format RuboCop::Formatter::CheckstyleFormatter --no-color --rails --out .framgia-ci-reports/rubocop.xml app/ lib/
   scss-lint:
-    command: scss-lint --require=scss_lint_reporter_checkstyle --format=Checkstyle --out=.framgia-ci-reports/scss-lint.xml app/assets/stylesheets/
+    command: scss-lint --require=scss_lint_reporter_checkstyle --format=Checkstyle --out=.framgia-ci-reports/scss-lint.xml app/assets/stylesheets/ -e app/assets/stylesheets/application.css,app/assets/stylesheets/home.scss
   eslint:
-    command: rake eslint:run_all --format=checkstyle --output-file=.framgia-ci-reports/eslint.xml app/
+    command: rake eslint:run_all --format=checkstyle --output-file=.framgia-ci-reports/eslint.xml app/ --ignore-path path::app/assets/javascripts/application.js
     ignore: true
   rails_best_practices:
     command: rails_best_practices --format html --output-file .framgia-ci-reports/rails_best_practices.html app/
